--- a/JopWebsite/Views/Home/SearchJops.cshtml
+++ b/JopWebsite/Views/Home/SearchJops.cshtml
@@ -31,7 +31,7 @@
                                 <div class="card-moved">
                                     <h2>@Html.DisplayFor(ModelItem => subItem.JopTitle)</h2>
                                     <p style="font-weight:400">@Html.DisplayFor(ModelItem => subItem.JopContent)</p>
-                                    <a href="@Url.Action("Details","Jops",new { id = item.Id })" class="btn btn-success"><span class="glyphicon glyphicon-inbox"></span>  التفاصل </a>
+                                    <a href="@Url.Action("Details","Jops",new { id = item.Id })" class="btn btn-microsoft"><span class="glyphicon glyphicon-inbox"></span>  التفاصل </a>
                                 </div>
                             </div>
                      
